Change filename, fix spacing.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,54 +2,54 @@
 @font-face {
     font-family: asphalts;
     src: url('asphalts.otf'); 
-    }
+}
 
-html, body, mountainoutline {
-	margin: 0;
-	padding: 0;
+html, body, mountainsilhouette {
+    margin: 0;
+    padding: 0;
 }
 
 #galaxy {
-	z-index: -1;
+    z-index: -1;
 }
 
 #header {
-	height: 400px;
-	background: url("../galaxy_paint.jpg");
-	background-size: cover;
-	background-position: right bottom;
+    height: 400px;
+    background: url("../galaxy_paint.jpg");
+    background-size: cover;
+    background-position: right bottom;
 }
 
 h1 {
-	font-family: 'Lato', sans-serif;
-	font-size: 100px;
-	color: #99ffcc;
-	/* Current gradient code will only work on webkit ... needs fixing */
-	background: -webkit-linear-gradient(#fff, #009999);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-	position: absolute;
-	margin-top: 0;
-	top: 150px;
-	left: 50%;
-	transform: translate(-50%, 0); 
-	z-index: 1;
+    font-family: 'Lato', sans-serif;
+    font-size: 100px;
+    color: #99ffcc;
+    /* Current gradient code will only work on webkit ... needs fixing */
+    background: -webkit-linear-gradient(#fff, #009999);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: absolute;
+    margin-top: 0;
+    top: 150px;
+    left: 50%;
+    transform: translate(-50%, 0); 
+    z-index: 1;
 }
 
 h2 {
-	font-size: 130px;
-	/* font-family: 'Yesteryear', cursive; */
-	/* font-family: 'Caveat', cursive; */
-	font-family: asphalts;
-	letter-spacing: 6px;
-	color: #ff0000;
-	position: absolute;
-	margin-top: 0;
-	top: 190px;
-	left: 55%;
-	transform: translate(-50%, 0); 
-	z-index: 2;
-	-ms-transform: rotate(348deg); 
+    font-size: 130px;
+    /* font-family: 'Yesteryear', cursive; */
+    /* font-family: 'Caveat', cursive; */
+    font-family: asphalts;
+    letter-spacing: 6px;
+    color: #ff0000;
+    position: absolute;
+    margin-top: 0;
+    top: 190px;
+    left: 55%;
+    transform: translate(-50%, 0); 
+    z-index: 2;
+    -ms-transform: rotate(348deg); 
     -webkit-transform: rotate(348deg); 
     transform: rotate(350deg);
 }
